# testing

./: .env  .gitignore  DOCS.ipynb  DOCS.md  README.md  playground.ipynb  pyproject.toml  test_weather.py
.github/workflows/: ci.yml  docs.yml  guardrails_ci.yml  testing_ci.yml
demo/anthropic_computer_use/: test.py
demo/swarm_agentic_rag/: run.py  test.py  trace_buggy.json  trace_fixed.json
docs/: Dockerfile  README.md  TODO.md  mkdocs.yml  requirements.txt  snippets.py
docs/docs/: index.md  quickstart.md  snippets.py
invariant/: __main__.py  formatter.py  manager.py  testing.py  utils.py
invariant/custom_types/: assertions.py  invariant_bool.py  invariant_dict.py  invariant_image.py  invariant_list.py  invariant_number.py  invariant_string.py  invariant_value.py  matchers.py  trace.py
invariant/scorers/: code.py
invariant/testing/: __init__.py  functional.py
invariant/utils/: context.py  explorer.py  packages.py  utils.py
invariant_runner/: __main__.py  config.py  constants.py  formatter.py  manager.py  runner.py  testing.py  utils.py
invariant_testing/: README.md  __init__.py  __main__.py  ranges.py
sample_tests/: test_agent.py  test_code.py  test_invariant_value.py  test_moderation.py  test_strings.py
tests/: test_assertion_args.py  test_code.py  test_contains.py  test_display.py  test_error_propagation.py  test_factuality.py  test_is_similar.py  test_lists.py  test_moderation.py  test_modes.py  test_runner.py  test_selectors.py  test_similar.py  test_strings.py  test_test_naming.py  test_tool_calls.py  test_trace.py  testutils.py
(+163 files in other folders)
