[tool.poetry]
name = "invariant-testing"
version = "0.0.1"
description = "Testing library for AI Agents by InvariantLabs"
authors = ["InvariantLabs <hello@invariantlabs.ai>"]
readme = "README.md"
packages = [{ include = "invariant_runner" }]

[tool.poetry.dependencies]
python = ">= 3.10"
pydantic = "^2.9.2"
requests = "^2.32.3"
nltk = "^3.9.1"
pytest = "^8.3.3"
openai = "^1.54.4"
Pillow = "^10.0.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"